--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@pigment-css/react": "^0.0.23",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
     "@eslint/js": "^9.9.0",
+    "@pigment-css/vite-plugin": "^0.0.23",
     "@storybook/addon-essentials": "^8.3.2",
     "@storybook/addon-interactions": "^8.3.2",
     "@storybook/addon-links": "^8.3.2",
@@ -47,7 +49,7 @@
       "optional": true
     }
   },
-  "packageManager": "pnpm@8.15.2+sha512.0ad484913902bbfe73988ef3d8d1c510aeb0c65483babdc40589c1a6635cf86039bc3639bde39d14a3cc9e0271e7fad1c7fa891c47ca7c7f1eb06bffdcc3939f",
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
