--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@mui/base": "5.0.0-beta.58",
     "@pigment-css/react": "^0.0.23",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
