--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
     "storybook": "^8.3.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
