--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
 shamefully-hoist=true
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+@mayfestivalstandingcommittee:registry=https://npm.pkg.github.com
