--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bulbul",
+  "name": "@mayfestivalstandingcommittee/bulbul",
   "private": true,
   "version": "0.0.0",
   "type": "module",
