--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mayfestivalstandingcommittee/bulbul",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "files": [
