--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
       "require": "./dist/index.umd.js"
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MayFestivalStandingCommittee/bulbul.git"
+    },
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc -b",
